<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_reg"
        android:layout_height="60dp">
    <ImageView
        android:id="@+id/lock"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_qulf"
        />
    <TextView
        android:layout_marginStart="28dp"
        android:id="@+id/summa"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/lock"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Qulflash tizimi"
        android:textStyle="bold"
        />
    <TextView
        android:layout_marginStart="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@+id/lock"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Tizimga kirganda pin kodni so‘rash"
        app:layout_constraintTop_toBottomOf="@id/summa"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_reg"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/eksport"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_exsport"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:id="@+id/tx_eksport"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/eksport"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/eksport"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/eksport"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/tx_eksport"
            app:layout_constraintTop_toBottomOf="@id/tx_eksport"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_reg"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/currency"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_valyuta"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:id="@+id/tx_currency"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/currency"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/currency"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/currency"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/uzs"
            app:layout_constraintTop_toBottomOf="@id/tx_currency"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_reg"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/language"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_language"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:id="@+id/tx_language"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/language"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/change_language"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/language"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="O'zbekcha"
            app:layout_constraintTop_toBottomOf="@id/tx_language"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_reg"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/clean"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_delete"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:id="@+id/tx_clean"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/clean"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/clean"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/clean"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Barcha hisobotlar o‘chib ketadi"
            app:layout_constraintTop_toBottomOf="@id/tx_clean"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>